[package]
name = "rifme"
version = "0.1.0"
about = "A simple tool to generate russian rhymes with rifme.net service"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
reqwest = { version = "0.11.13" }
scraper = "0.13.0"
